# aider_test_project

./: .gitignore  README.md  To run this script, save it as `file_reader.py` and execute it from the command line with the path to your audio file  app.js  file_reader.py  index.html  main.py  pyproject.toml  requirements_aider.txt  styles.css  transcriber.py
backend/: crud.py  main.py  requirements.txt
backend/db/: session.py
backend/models/: item.py
backend/tests/: conftest.py  test_crud.py
front/: .env.example  .gitignore  README.md  index.html  vite.config.js
front/public/: README.md
front/src/: App.jsx  main.jsx
front/src/__tests__/: .gitkeep
front/src/assets/fonts/: .gitkeep
front/src/assets/icons/: .gitkeep
front/src/assets/images/: .gitkeep
front/src/components/common/: .gitkeep
front/src/components/features/: .gitkeep
front/src/components/layout/: .gitkeep
front/src/components/ui/: index.js
front/src/config/: README.md
front/src/constants/: README.md
front/src/context/: ThemeContext.jsx  index.js
front/src/data/: mockTests.js
front/src/hooks/: README.md  useTheme.js
front/src/pages/: README.md
front/src/pages/Home/: HomePage.jsx  HomePage.scss
front/src/pages/NotFound/: NotFoundPage.jsx  NotFoundPage.scss
front/src/router/: README.md
front/src/services/: README.md
front/src/store/: README.md
front/src/styles/: README.md  main.scss
front/src/types/: README.md
front/src/utils/: README.md  dateUtils.js  statusUtils.js
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: ItemForm.tsx
(+40 files in other folders)
