[project]
name = "aider-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-install>=0.2.0",
    "mlx-whisper>=0.4.3",
    "openai-whisper>=20250625",
]

[dependency-groups]
dev = [
    "aider-chat>=0.86.1",
]
